# nagios-plugins-linux

./: .codeclimate.yml  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  DEVELOPERS.md  Makefile.am  NEWS  NEWS-OLD  NEWS.md  README  README.md  SECURITY.md  _config.yml  check_skel.c.sample  configure.ac  index.html  index.md  libtool  params.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-checks.yml  codeql-analysis.yml  ubuntu-build-check.yml
contrib/: README.md
contrib/icinga2/: CheckCommands.conf
debian/: Makefile.am  changelog  control  copyright  nagios-plugins-linux-clock.install  nagios-plugins-linux-container.install  nagios-plugins-linux-cpu.install  nagios-plugins-linux-cpufreq.install  nagios-plugins-linux-cswch.install  nagios-plugins-linux-docker.install  nagios-plugins-linux-fc.install  nagios-plugins-linux-ifmountfs.install  nagios-plugins-linux-intr.install  nagios-plugins-linux-iowait.install  nagios-plugins-linux-load.install  nagios-plugins-linux-memory.install  nagios-plugins-linux-multipath.install  nagios-plugins-linux-nbprocs.install  nagios-plugins-linux-network.install  nagios-plugins-linux-network.links  nagios-plugins-linux-paging.install  nagios-plugins-linux-pressure.install  nagios-plugins-linux-readonlyfs.install  nagios-plugins-linux-selinux.install  nagios-plugins-linux-swap.install  nagios-plugins-linux-tcpcount.install  nagios-plugins-linux-temperature.install  nagios-plugins-linux-uptime.install  nagios-plugins-linux-users.install  rules
etc/icinga2/zones.d/linux-commands/: CheckCommands.conf
include/: Makefile.am  collection.h  common.h  container.h  container_docker.h  container_podman.h  cpudesc.h  cpufreq.h  cpuinfo.h  cpustats.h  cputopology.h  darray.h  files.h  getenv.h  interrupts.h  jsmn.h  json.h  json_helpers.h  kernelver.h  logging.h  meminfo.h  messages.h  mountlist.h  netinfo-private.h  netinfo.h  npl_selinux.h  perfdata.h  pressure.h  processes.h  procparser.h  progname.h  progversion.h  string-macros.h  sysfsparser.h  system.h  tcpinfo.h  testutils.h  thresholds.h  units.h  url_encode.h  (+5 more)
lib/: Makefile.am  collection.c  common.h  container.c  container_count.c  container_docker_count.c  container_docker_memory.c  container_memory.c  container_podman.c  container_podman_count.c  container_podman_stats.c  cpudesc.c  cpufreq.c  cpuinfo.c  cpuinfo.h  cpustats.c  cputopology.c  error.c  error.h  files.c  interrupts.c  json.c  json_helpers.c  kernelver.c  meminfo.c  meminfo.h  meminfo_procps.c  messages.c  messages.h  mountlist.c  netinfo-private.c  netinfo.c  npl_selinux.c  nputils.c  nputils.h  perfdata.c  pressure.c  processes.c  procparser.c  progname.c  (+14 more)
libcpuinfo/: ChangeLog  Makefile.am  NEWS  README  TODO  cpuinfo-arch.c  cpuinfo-common.c  cpuinfo-private.h  debug.c  debug.h  sysdeps.h
m4/: cc_try_cflags.m4  cc_try_ldflags.m4
plugins/: Makefile.am  check_clock.c  check_container.c  check_cpu.c  check_cpufreq.c  check_cswch.c  check_ctxt.c  check_docker.c  check_fc.c  check_filecount.c  check_ifmountfs.c  check_intr.c  check_io_latency.c  check_load.c  check_memory.c  check_multipath.c  check_nbprocs.c  check_network.c  check_paging.c  check_podman.c  check_pressure.c  check_readonlyfs.c  check_selinux.c  check_swap.c  check_tcpcount.c  check_temperature.c  check_uptime.c  check_users.c
src/: Makefile.am  check_ifmountfs.c  check_memory.c  check_readonlyfs.c  check_swap.c  check_uptime.c  config.h  meminfo.c  meminfo.h  nputils.c  nputils.h
tests/: Makefile.am  testutils.c  ts_container_docker.data  ts_container_podman_GetContainerStats.data  ts_container_podman_GetContainersByStatus.data  ts_container_podman_ListContainers.data  ts_procmeminfo.data  ts_procpressurecpu.data  ts_procpressureio.data  ts_procstat.data  ts_procvmstat.data  ts_sysdockermemstat.data  tsclang_checker.sh  tsclock.c  tsclock_thresholds.c  tscswch.c  tsintr.c  tskernelver.c  tslib_uname.c  tslibcontainer.c  tslibcontainer_count.c  tslibcontainer_docker_count.c  tslibcontainer_docker_memory.c  tslibcontainer_memory.c  tslibcontainer_podman.c  tslibcontainer_podman_count.c  tslibcontainer_podman_list.c  tslibcontainer_podman_stats.c  tslibfiles_age.c  tslibfiles_filecount.c  tslibfiles_hiddenfile.c  tslibfiles_size.c  tslibkernelver.c  tslibmeminfo.c  tslibmeminfo_conversions.c  tslibmeminfo_interface.c  tslibmeminfo_procparser.c  tslibmessages.c  tslibperfdata.c  tslibpressure.c  (+18 more)
tests-build/: Makefile.am  mpbuild.py  multibuild.sh  nagios-plugins-linux.spec
tests-build/docker-shell-helpers/: docker-shell-helpers.sh
tests-build/specs/: Makefile.am  nagios-plugins-linux.spec.in
