## Process this file with automake to produce Makefile.in

## Copyright (c) 2014-2016 Davide Madrisan <davide.madrisan@gmail.com>
##
## This program is free software: you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation, either version 3 of the License, or
## (at your option) any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program.  If not, see <http://www.gnu.org/licenses/>.

AM_CPPFLAGS = -include $(top_builddir)/config.h

noinst_HEADERS = \
	common.h \
	cpudesc.h \
	cpufreq.h \
	cpustats.h \
	cputopology.h \
	getenv.h \
	kernelver.h \
	interrupts.h \
	logging.h \
	meminfo.h \
	mountlist.h \
	messages.h \
	netinfo.h \
	processes.h \
	procparser.h \
	progname.h \
	progversion.h \
	string-macros.h \
	sysfsparser.h \
	system.h \
	tcpinfo.h \
	testutils.h \
	thresholds.h \
	vminfo.h \
	xalloc.h \
	xasprintf.h \
	xstrtol.h
